# wasmtime

./: Cargo.toml
cranelift/: Cargo.toml
cranelift/codegen/src/: lib.rs
cranelift/codegen/src/isa/: mod.rs
cranelift/codegen/src/isa/x64/: mod.rs
cranelift/codegen/src/machinst/: buffer.rs  vcode.rs
crates/cli-flags/: Cargo.toml
crates/cli-flags/src/: lib.rs
crates/cranelift-shared/src/: compiled_function.rs  lib.rs  obj.rs
crates/cranelift/src/: compiler.rs  lib.rs  obj.rs
crates/types/src/: lib.rs
crates/wasmtime/: Cargo.toml
crates/wasmtime/src/: config.rs  func.rs  module.rs
crates/winch/: Cargo.toml
crates/winch/src/: builder.rs  compiler.rs  lib.rs  obj.rs
src/commands/: run.rs
tests/all/: main.rs  winch.rs
winch/: Cargo.toml
winch/codegen/: Cargo.toml
winch/codegen/src/: codegen.rs  disasm.rs  lib.rs  masm.rs
winch/codegen/src/abi/: local.rs
winch/codegen/src/codegen/: call.rs  mod.rs
winch/codegen/src/frame/: mod.rs
winch/codegen/src/isa/: mod.rs  reg.rs
winch/codegen/src/isa/aarch64/: asm.rs  masm.rs  mod.rs
winch/codegen/src/isa/x64/: asm.rs  masm.rs  mod.rs
winch/docs/: testing.md
winch/filetests/: Cargo.toml
winch/filetests/src/: lib.rs
winch/src/: compile.rs  filetests.rs
winch/test-macros/: Cargo.toml
winch/test-macros/src/: lib.rs
